pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart.strong.transformed.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:30:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   new F0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"]);
//                                                      ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:31:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   new F0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello", 3]);
//                                                      ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:35:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   new F1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"]);
//                                                         ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:36:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   new F1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello", 3]);
//                                                         ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:40:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   new F2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"]);
//                                                      ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:41:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   new F2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello", 3]);
//                                                      ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:48:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//     [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                 ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:51:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//     [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                 ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:63:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//       [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                   ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:68:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//       [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                   ^
//
import self as self;
import "dart:core" as core;

class F0 extends core::Object {
  constructor •(core::List<core::int> a) → self::F0
    : super core::Object::•() {}
}
class F1 extends core::Object {
  constructor •({required core::List<core::int> a}) → self::F1
    : super core::Object::•() {}
}
class F2 extends core::Object {
  constructor •(core::Iterable<core::int> a) → self::F2
    : super core::Object::•() {}
}
class F3 extends core::Object {
  constructor •(core::Iterable<core::Iterable<core::int>> a) → self::F3
    : super core::Object::•() {}
}
class F4 extends core::Object {
  constructor •({required core::Iterable<core::Iterable<core::int>> a}) → self::F4
    : super core::Object::•() {}
}
static method test() → void {
  new self::F0::•(core::_GrowableList::•<core::int>(0));
  new self::F0::•(core::_GrowableList::_literal1<core::int>(3));
  new self::F0::•(core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:30:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  new F0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"]);
                                                     ^" in "hello" as{TypeError} core::int));
  new self::F0::•(core::_GrowableList::_literal2<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:31:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  new F0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\", 3]);
                                                     ^" in "hello" as{TypeError} core::int, 3));
  new self::F1::•(a: core::_GrowableList::•<core::int>(0));
  new self::F1::•(a: core::_GrowableList::_literal1<core::int>(3));
  new self::F1::•(a: core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:35:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  new F1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"]);
                                                        ^" in "hello" as{TypeError} core::int));
  new self::F1::•(a: core::_GrowableList::_literal2<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:36:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  new F1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\", 3]);
                                                        ^" in "hello" as{TypeError} core::int, 3));
  new self::F2::•(core::_GrowableList::•<core::int>(0));
  new self::F2::•(core::_GrowableList::_literal1<core::int>(3));
  new self::F2::•(core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:40:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  new F2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"]);
                                                     ^" in "hello" as{TypeError} core::int));
  new self::F2::•(core::_GrowableList::_literal2<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:41:54: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  new F2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\", 3]);
                                                     ^" in "hello" as{TypeError} core::int, 3));
  new self::F3::•(core::_GrowableList::•<core::Iterable<core::int>>(0));
  new self::F3::•(core::_GrowableList::_literal1<core::Iterable<core::int>>(core::_GrowableList::_literal1<core::int>(3)));
  new self::F3::•(core::_GrowableList::_literal1<core::Iterable<core::int>>(core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:48:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
    [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                ^" in "hello" as{TypeError} core::int)));
  new self::F3::•(core::_GrowableList::_literal2<core::Iterable<core::int>>(core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:51:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
    [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                ^" in "hello" as{TypeError} core::int), core::_GrowableList::_literal1<core::int>(3)));
  new self::F4::•(a: core::_GrowableList::•<core::Iterable<core::int>>(0));
  new self::F4::•(a: core::_GrowableList::_literal1<core::Iterable<core::int>>(core::_GrowableList::_literal1<core::int>(3)));
  new self::F4::•(a: core::_GrowableList::_literal1<core::Iterable<core::int>>(core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:63:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
      [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                  ^" in "hello" as{TypeError} core::int)));
  new self::F4::•(a: core::_GrowableList::_literal2<core::Iterable<core::int>>(core::_GrowableList::_literal1<core::int>(invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_constructor_arguments_infer_downwards.dart:68:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
      [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                  ^" in "hello" as{TypeError} core::int), core::_GrowableList::_literal1<core::int>(3)));
}
static method main() → dynamic {}
